<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/view1"
            android:textColor="#A7C"
            android:textSize="24sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline" />

        <CheckBox
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_200"
            android:text="@string/view2"
            android:textSize="24sp"

            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

        <Button
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/view3"
            android:textSize="20sp"

            app:layout_constraintDimensionRatio="2"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline" />

        <TextView
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/view4"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/view6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/design_default_color_primary_dark"
            android:contentDescription="@string/view5"

            app:layout_constraintDimensionRatio="0.5"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintBottom_toTopOf="@id/view6"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@color/teal_700"

            app:layout_constraintDimensionRatio="0.5"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintTop_toBottomOf="@id/view4" >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="24sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>